# Eqc_test

./: .gitignore  CLAUDE.md  Cargo.toml  LICENSE  README.md  _commitmsg.txt  eqc-secret.example  sim_output.csv
.cargo/: config.toml
docs/: CHANGELOG.md  USAGE.md  audit-single-source-and-fspm-prereqs.md  gp-adoption-playbook.md  iteration-syntax.md  spec-calibration.md  spec-coupled-simulation.md  spec-fspm-aggregation.md  spec-fspm-development.md  spec-fspm-foundation.md  spec-fspm-geometry.md  spec-fspm-organ-flow.md  spec-genetic-programming.md  spec-gp-candidate-branching.md  spec-gp-studio.md  spec-graph-analysis.md  spec-implicit-solver-phase0.md  spec-model-evolution-arc.md  spec-operator-registry-and-evaluator.md  spec-optimization.md  spec-studio-frontend-v2.md  spec-units.md  spec-vector-matrix.md  theory-model-graph-analysis.md
examples/: cascade.eq.yaml  evo_metrics.rs  greenhouse.sexpr  math_demo.eq.yaml  operators_advanced_special.eq.yaml  operators_airy_extended.eq.yaml  operators_airy_kelvin_full.eq.yaml  operators_aliases_trig.eq.yaml  operators_bessel.eq.yaml  operators_bessel_extended.eq.yaml  operators_bessel_full.eq.yaml  operators_combinatorics.eq.yaml  operators_complete.eq.yaml  operators_complex_extended.eq.yaml  operators_complex_full.eq.yaml  operators_distributions_extended.eq.yaml  operators_distributions_full.eq.yaml  operators_elliptic_extended.eq.yaml  operators_elliptic_full.eq.yaml  operators_error_funcs.eq.yaml  operators_exp_log.eq.yaml  operators_extended.eq.yaml  operators_extended_trig.eq.yaml  operators_final.eq.yaml  operators_fresnel_extended.eq.yaml  operators_gamma_beta_full.eq.yaml  operators_gsl_coverage.eq.yaml  operators_hyperbolic.eq.yaml  operators_hypergeometric.eq.yaml  operators_integrals_full.eq.yaml  operators_logic.eq.yaml  operators_matrix.eq.yaml  operators_misc.eq.yaml  operators_misc_aliases.eq.yaml  operators_misc_special.eq.yaml  operators_ml_full.eq.yaml  operators_ml_stats.eq.yaml  operators_parabolic_spheroidal.eq.yaml  operators_poly.eq.yaml  operators_polynomials_full.eq.yaml  (+18 more)
examples/gpdemo3/: adopted.md  drivers.csv  gen_data.py  gpdemo3.eq.yaml  observed.csv  spec.yaml
frontend/: .gitignore  index.html  package-lock.json  package.json  playwright.config.cjs  tsconfig.json  vite.config.ts
frontend/e2e/: agent.spec.cjs  evolution.spec.cjs  fspm_structure.spec.cjs  gp_growth.spec.cjs  mock.spec.cjs  real.spec.cjs  topology3d.spec.cjs
frontend/src/: App.svelte  app.css  contract.ts  main.ts
output/: dag.dot  dag.md
output/docs/: cascade.md  dag.md  equations.md  math_demo.md  operators_advanced.md  operators_complete.md  operators_full.md  photo.md
output/latex/: cascade.tex  equations.tex  math_demo.tex  operators_advanced.tex  operators_complete.tex  operators_full.tex  photo.tex
output/python/: __init__.py  cascade.py  math_demo.py  operators_advanced.py  operators_complete.py  operators_full.py  params.py  photo.py
output/rust/: cascade.rs  math_demo.rs  mod.rs  operators_advanced.rs  operators_complete.rs  operators_full.rs  photo.rs
output/workflows/: cascade.json  dag.json  math_demo.json  operators_advanced.json  operators_complete.json  operators_full.json  photo.json
src/: chart.rs  error.rs  evolution.rs  export.rs  lib.rs  main.rs  palette.rs  scenario.rs  serve.rs
src/ast/: README.md  expr.rs  mod.rs  visitor.rs
src/dag/: README.md  builder.rs  mod.rs
src/eval/: mod.rs
src/generators/: README.md  latex.rs  markdown.rs  mod.rs  python.rs  python_sim.rs  rust_operator.rs  workflow_json.rs
src/gp/: constraints.rs  evolve.rs  fitness.rs  grammar.rs  hard_filter.rs  joint.rs  mod.rs  operators.rs  pareto.rs  provenance.rs
src/graph/: bipartite.rs  diff.rs  digraph.rs  dm.rs  identifiability.rs  layout3d.rs  matching.rs  metrics.rs  mod.rs
src/ops/: mod.rs
src/optimize/: core.rs  coupled.rs  de.rs  mod.rs  objective.rs  problem.rs  run.rs
src/parser/: README.md  agg_fold.rs  cohort_expand.rs  compose.rs  mod.rs  structure_expand.rs  yaml_parser.rs
strawberry_model/: .gitignore  README.md  strawberry_s1.eq.yaml  strawberry_s2.eq.yaml  strawberry_s3.eq.yaml  strawberry_s4.eq.yaml  strawberry_v1.eq.yaml  strawberry_v1_vector.eq.yaml  草莓模型文献综述.md
tests/: integration_test.rs  llm_spike.rs  sexpr_test.rs
(+90 files in other folders)
