[package]
name = "equation-compiler"
version = "0.1.0"
edition = "2021"
authors = ["Boshenaware"]
description = "方程编译器 - 将 YAML 方程定义编译为多种格式（Python、Rust算子、JSON、Markdown、LaTeX）"
license = "MIT"
repository = "https://github.com/Boshenaware/equation-compiler"
keywords = ["equation", "compiler", "codegen", "dag", "lowcode"]
categories = ["development-tools", "science"]
readme = "README.md"

[lib]
name = "equation_compiler"
path = "src/lib.rs"

[[bin]]
name = "eqc"
path = "src/main.rs"
required-features = ["cli"]

# V1 主验收：真实三态温室模型上的显式↔隐式一致性（Phase 0）
[[example]]
name = "v1_greenhouse"
required-features = ["implicit"]

[features]
default = []
cli = ["clap", "walkdir", "ureq"]
advanced_math = ["statrs", "puruspe", "num-complex"]
gsl_math = ["GSL"]
calculus = ["peroxide"]
matrix = ["nalgebra"]
# 隐式刚性求解器（Phase 0）：接 diffsol 的 BDF。default-features=false + 只开 nalgebra 后端
# = 纯 Rust、无 C 依赖（不碰 SUNDIALS/SuiteSparse/LLVM/CUDA），扛离线/中国镜像。默认构建不含。
# 依赖 cli：隐式求解器住在 `sim` 模块里，而 `sim`/`parser` 目前门控在 cli feature 下。
implicit = ["cli", "dep:diffsol"]
full = ["cli", "advanced_math", "gsl_math", "calculus", "matrix"]

[dependencies]
# 序列化（必需）
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
serde_json = "1.0"

# 有序映射（保证参数/变量/元数据的迭代与序列化顺序确定、可复现）
indexmap = { version = "2", features = ["serde"] }

# 错误处理（必需）
thiserror = "1.0"

# 图算法（必需）
petgraph = "0.6"

# CLI（可选）
clap = { version = "4.0", features = ["derive"], optional = true }
walkdir = { version = "2.4", optional = true }

# 出站 HTTPS 客户端（serve 的 /api/llm 代理 Claude 用）：阻塞、同步、rustls 纯 Rust TLS
# （契合手写阻塞 server，无需 tokio；rustls 自带根证书，免系统证书库 = 适配无管理员的机器）
ureq = { version = "2", optional = true }

# 日志
tracing = "0.1"

# 高级数学（可选）
statrs = { version = "0.17", optional = true }
puruspe = { version = "0.2", optional = true }
num-complex = { version = "0.4", optional = true }
num-integer = { version = "0.1", optional = true }

# GSL 绑定（可选）
GSL = { version = "7.0", optional = true }

# 微积分（可选）
peroxide = { version = "0.37", optional = true, default-features = false }

# 矩阵运算（可选）
nalgebra = { version = "0.33", optional = true }

# 隐式刚性 ODE/DAE 求解器（可选，Phase 0 引擎地基）。MIT，纯 Rust 核心（nalgebra/faer），
# 闭包 RHS + 数值 FD Jacobian（J·v）+ BDF/SDIRK。锁定精确版本防 0.x breaking，藏在 implicit feature 后。
diffsol = { version = "=0.16.1", default-features = false, features = ["nalgebra"], optional = true }

[dev-dependencies]
tempfile = "3.0"
